re PR debug/44668 (class->DW_TAG_typedef is missing DW_AT_accessibility)

PR debug/44668
	* dwarf2out.c (add_accessibility_attribute): New function.
	(gen_subprogram_die, gen_variable_die, gen_field_die): Use it
	instead of adding DW_AT_accessibility manually.
	(gen_enumeration_type_die, gen_struct_or_union_type_die,
	gen_typedef_die): Use it.

	* g++.dg/debug/dwarf2/accessibility1.C: New test.

From-SVN: r161563